// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`state active 1`] = `
<Component
  id="Dropdown Toggle"
  isActive={true}
  parentRef={<div />}
>
  <Toggle
    className=""
    id="Dropdown Toggle"
    isActive={true}
    isDisabled={false}
    isFocused={false}
    isHovered={false}
    isOpen={false}
    isPlain={false}
    isSplitButton={false}
    onEnter={[Function]}
    onToggle={[Function]}
    parentRef={<div />}
  >
    <button
      aria-expanded={false}
      className="pf-c-dropdown__toggle pf-m-active"
      disabled={false}
      id="Dropdown Toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <span
        className="pf-c-dropdown__toggle-text"
      >
        Dropdown
      </span>
      <CaretDownIcon
        className="pf-c-dropdown__toggle-icon"
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
        title={null}
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          className="pf-c-dropdown__toggle-icon"
          fill="currentColor"
          height="1em"
          role="img"
          style={
            Object {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            transform=""
          />
        </svg>
      </CaretDownIcon>
    </button>
  </Toggle>
</Component>
`;

exports[`state focus 1`] = `
<Component
  id="Dropdown Toggle"
  isFocused={true}
  parentRef={<div />}
>
  <Toggle
    className=""
    id="Dropdown Toggle"
    isActive={false}
    isDisabled={false}
    isFocused={true}
    isHovered={false}
    isOpen={false}
    isPlain={false}
    isSplitButton={false}
    onEnter={[Function]}
    onToggle={[Function]}
    parentRef={<div />}
  >
    <button
      aria-expanded={false}
      className="pf-c-dropdown__toggle pf-m-focus"
      disabled={false}
      id="Dropdown Toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <span
        className="pf-c-dropdown__toggle-text"
      >
        Dropdown
      </span>
      <CaretDownIcon
        className="pf-c-dropdown__toggle-icon"
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
        title={null}
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          className="pf-c-dropdown__toggle-icon"
          fill="currentColor"
          height="1em"
          role="img"
          style={
            Object {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            transform=""
          />
        </svg>
      </CaretDownIcon>
    </button>
  </Toggle>
</Component>
`;

exports[`state hover 1`] = `
<Component
  id="Dropdown Toggle"
  isHovered={true}
  parentRef={<div />}
>
  <Toggle
    className=""
    id="Dropdown Toggle"
    isActive={false}
    isDisabled={false}
    isFocused={false}
    isHovered={true}
    isOpen={false}
    isPlain={false}
    isSplitButton={false}
    onEnter={[Function]}
    onToggle={[Function]}
    parentRef={<div />}
  >
    <button
      aria-expanded={false}
      className="pf-c-dropdown__toggle pf-m-hover"
      disabled={false}
      id="Dropdown Toggle"
      onClick={[Function]}
      onKeyDown={[Function]}
      type="button"
    >
      <span
        className="pf-c-dropdown__toggle-text"
      >
        Dropdown
      </span>
      <CaretDownIcon
        className="pf-c-dropdown__toggle-icon"
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
        title={null}
      >
        <svg
          aria-hidden={true}
          aria-labelledby={null}
          className="pf-c-dropdown__toggle-icon"
          fill="currentColor"
          height="1em"
          role="img"
          style={
            Object {
              "verticalAlign": "-0.125em",
            }
          }
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            transform=""
          />
        </svg>
      </CaretDownIcon>
    </button>
  </Toggle>
</Component>
`;
